# ragverse

./: .env.sample  .gitattributes  .gitignore  README.md  dev-docker-compose.yml  environment.yml  id_rsa  index.html  mkdocs.yml  setup_env.sh  test-docker.yml
.github/workflows/: actions.yml
backend/: .gitignore  backend.dockerfile  celeryworker.dockerfile  milvus.dockerfile  test_translator.py
backend/app/: .gitignore  README.md  create-data.sh  del_index_creator.py  download_model.py  index_creator.py  milvus_test.py  pyproject.toml  test1mail.py  testemail.py
backend/app/app/: __init__.py  few_shots.jsonl  initial_data.py  main.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: __init__.py  books.py  chat.py  languages.py  login.py  prompts.py  testPrompts.py  users.py
backend/app/app/core/: config.py
backend/app/app/crud/: __init__.py  crud_user.py
backend/app/app/db/: base.py  init_db.py  session.py
backend/app/app/engine/: __init__.py  configuration.py  constants.py  few_shots.jsonl  generate.py  index.py  index_creator.py  indic_lang_codes.py  loader.py  model_data.py  prompt_manager.py  query_engine_tool_loader.py  query_manager.py
backend/app/app/models/: __init__.py  book.py  language.py  prompt.py  testPrompts.py
backend/app/app/schemas/: __init__.py  book.py  language.py  prompt.py  testPrompts.py  token.py
backend/app/app/tools/: groq_test.py  index_creator.py  milvus_client.py  milvus_test.py  summary_index_creator.py
backend/app/app/utilities/: email.py
control-panel/: .env.local.sample  Dockerfile  README.md  index.html  package-lock.json  package.json
control-panel/public/: manifest.json
control-panel/src/: App.tsx  dataProvider.ts
control-panel/src/components/: bookCreate.tsx  languageCreate.tsx  promptCreate.tsx  testPromptCreate.tsx
docs/: backend.md  control-panel.md  frontend.md  getting-started.md  index.md
frontend/: .dockerignore  .env copy.local  .env.local.sample  .gitignore  Dockerfile  Dockerfile-local  Makefile  README.md  middleware.ts  next.config.js  package.json  tailwind.config.js
frontend/agent/: agentConvo.ts
frontend/agent/plugins/: list.ts
frontend/components/: Navigation.tsx  Notification.tsx
frontend/components/Chat/: Chat.tsx  ChatInput.tsx  ChatLoader.tsx  ChatMessage.tsx  ChatModeSelect.tsx  PromptList.tsx  (+6 more)
frontend/hooks/: usePrompts.ts
frontend/pages/: _app.tsx  _document.tsx
frontend/public/: plugins.json
frontend/scripts/: create-mongodb-backup.sh  restore-db.sh
frontend/server/: context.ts  trpc.ts
frontend/services/: useApiService.ts
frontend/types/: agent.ts  env.ts  openai.ts  prompt.ts  settings.ts  test-prompt.ts  user.ts
frontend/utils/: trpc.ts
schemas/: env.json
scripts/: generate_env.py
(+65 files in other folders)
